--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open"
   },
   "author": "Kevin Monisit",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.2.6",
+    "eslint": "^7.29.0",
+    "eslint-config-google": "^0.14.0",
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.0.0",
     "webpack": "^5.41.1",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
