--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
     "html-webpack-plugin": "^5.3.2",
+    "raw-loader": "^4.0.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "normalize": "^0.3.1",
+    "normalize.css": "^8.0.1"
   }
 }
