--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css-loader": "^5.2.6",
     "eslint": "^7.29.0",
     "eslint-config-google": "^0.14.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "raw-loader": "^4.0.2",
     "style-loader": "^3.0.0",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "normalize": "^0.3.1",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "ttf2woff2": "^4.0.3"
   }
 }
